# dcat-ap-hub

./: .gitignore  README.md  pyproject.toml
demo/: dataset_pmd.ttl  model_tabpfn.ttl  tabpfn copy.ipynb  tabpfn.ipynb
examples/: benchmark.jsonld  benchmark.md  benchmark.ttl  ideas.md  tabpfn.ipynb  tabpfn_inference.py  test.ipynb
examples/metadata/: catalogue.ttl  dataset_fss.ttl  dataset_ifd.ttl  dataset_m6g.ttl  dataset_pmd.ttl
examples/notebooks/: notebook_m6g.ipynb
examples/processors/: processor_ifd.py  processor_m6g.py  processor_pmd.py  tabpfn.py
notebooks/: data.ipynb  experiment.ipynb  model.ipynb  test.ipynb
src/dcat_ap_hub/: __init__.py  download.py  metadata.py  parsing.py
src/dcat_ap_hub/core/: core.py  dataset.py  interfaces.py
src/dcat_ap_hub/internals/: constants.py  integrations.py  loaders.py  models.py  parser.py  processor.py  transfer.py  utils.py
src/dcat_ap_hub/loading/: download.py  download_data.py  huggingface.py  load_data.py  load_hf_model.py  loaders.py  metadata.py  supported.py
src/dcat_ap_hub/metadata/: metadata.py
src/dcat_ap_hub/parsing/: parsing.py
tests/: test_data_role.py  test_model_role.py
