[project]
name = "dcat-ap-hub"
version = "0.1.3"
description = "A library for loading datasets and models whose metadata is provided in the DCAT-AP format."
readme = "README.md"
authors = [
    { name = "maxbrzr", email = "maximilian.burzer@kit.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "chardet>=5.2.0,<6.0.0",
    "opencv-python>=4.12.0.88",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pypdf>=6.1.0",
    "rdflib>=7.1.4",
    "requests>=2.32.4",
    "tabpfn>=6.0.5",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
onnx = [
    "onnxruntime>=1.20.0",
]

huggingface = [
    "accelerate>=1.12.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "pandas-stubs>=2.3.0.250703",
    "pytest>=9.0.2",
    "types-requests>=2.32.4.20250611",
    "types-tqdm>=4.67.0.20250516",
]
